--- a/index.html
+++ b/index.html
@@ -6,40 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
-	<script src="script.js"></script>
+	
   </head>
   <body>
 	<main class="container">
-		<div class="display">159645</div>
+		<div class="display"></div>
 		<div class="top-buttons">
-			<div class="top">C</div>
-			<div class="top">X</div>
+			<div class="c">C</div>
+			<div class="x">X</div>
 		</div>
 		<div class="secondary-container">
 			<div class="number-container">
-				<div class="number">1</div>
-				<div class="number">2</div>
-				<div class="number">3</div>
-				<div class="number">4</div>
-				<div class="number">5</div>
-				<div class="number">6</div>
-				<div class="number">7</div>
-				<div class="number">8</div>
-				<div class="number">9</div>
-				<div class="number">.</div>
-				<div class="number">0</div>
+				<div class="number btn">1</div>
+				<div class="number btn">2</div>
+				<div class="number btn">3</div>
+				<div class="number btn">4</div>
+				<div class="number btn">5</div>
+				<div class="number btn">6</div>
+				<div class="number btn">7</div>
+				<div class="number btn">8</div>
+				<div class="number btn">9</div>
+				<div class="number btn">.</div>
+				<div class="number btn">0</div>
 				<div class="number">=</div>
 				
 			</div>
 			<div class="operator-container">
-				<div class="operator">+</div>
-				<div class="operator">-</div>
-				<div class="operator">*</div>
-				<div class="operator">/</div>
+				<div class="operator btn">+</div>
+				<div class="operator btn">-</div>
+				<div class="operator btn">*</div>
+				<div class="operator btn">/</div>
 				
 			</div>
 		</div>
 		
 	</main>
+	<script src="script.js"></script>
   </body>
+  
+  
 </html>
