--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
@@ -11,9 +11,10 @@
   <body>
 	<main class="container">
 		<div class="display"></div>
+		<div class="panel">
 		<div class="top-buttons">
 			<div class="c">C</div>
-			<div class="x">X</div>
+			<div class="x">&#9003;</div>
 		</div>
 		<div class="secondary-container">
 			<div class="number-container">
@@ -28,7 +29,7 @@
 				<div class="number btn">9</div>
 				<div class="number btn">.</div>
 				<div class="number btn">0</div>
-				<div class="number">=</div>
+				<div class="number equal">=</div>
 				
 			</div>
 			<div class="operator-container">
@@ -39,7 +40,7 @@
 				
 			</div>
 		</div>
-		
+	</div>
 	</main>
 	<script src="script.js"></script>
   </body>
