--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 	
   </head>
   <body>
+	<div id="myModal" class="modal">
+
+		<!-- Modal content -->
+		<div class="modal-content">
+		 
+		  <img class="mia" src="mia.jpeg"/>
+		</div>
+	  
+	  </div>
 	<main class="container">
 		<div class="display"></div>
 		<div class="panel">
