--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- Modal content -->
 		<div class="modal-content">
 		 
-		  <img class="mia" src="./mia.jpeg"/>
+		  <img class="mia" src="mia.jpeg"/>
 		</div>
 	  
 	  </div>
